Composer: Install Slim 4.12

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
             "email": "ulrich.eckhardt@base-42.de"
         }
     ],
-    "require": {}
+    "require": {
+        "slim/slim": "^4.12"
+    }
 }
