--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^7.8",
+        "itsgoingd/clockwork": "dev-master",
         "phpunit/phpunit": "^10.0"
     }
 }
