--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "slim/psr7": "^1.6"
     },
     "require-dev": {
+        "guzzlehttp/guzzle": "^7.8",
         "phpunit/phpunit": "^10.0"
     }
 }
