Git: Properly anchor ignore patterns
`vendor/` actually ignored the `public/vendor` dir, too, but that
was not by intention.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # PHP Composer files
-vendor/
+/vendor/
 
 # PHPUnit cache
-.phpunit.cache/
+/.phpunit.cache/
 
 # Visual Studio Code (VS Code) IDE configuration
-.vscode/
+/.vscode/
